--- a/html/index.html
+++ b/html/index.html
@@ -22,16 +22,16 @@
             <td style="width: 50%"><img id="right-img" src="indigo_v_pseudo_on_img.jpg", style="max-width: 100%"></td>
         </tr>
         <tr>
-            <td>
+            <td style="width: 25%">
                 <input type="button" value="Arabidopsis" onclick="relaod_imgs('arabidopsis')">
             </td>
-            <td>
+            <td style="width: 25%">
                 <input type="button" value="Cassava" onclick="relaod_imgs('cassava')">
             </td>
-            <td>
+            <td style="width: 25%">
                 <input type="button" id="indigo" value="Indigo" onclick="relaod_imgs('indigo')">
             </td>
-            <td>
+            <td style="width: 25%">
                 <input type="button" id="indigo" value="Sorghum" onclick="relaod_imgs('sorghum')">
             </td>
         </tr>
